--- a/anime.css
+++ b/anime.css
@@ -122,7 +122,7 @@ input, select{
   
   border: 1px solid #CCC;
   border-radius: 4px;
-  box-sizing: border-box; /* Pour être sûr que la largeur et le padding ne dépassent pas */
+  box-sizing: border-box; 
   
   resize: vertical 
 }
